# PasteTrader

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  RUFF_DIAGNOSTICS_REPORT.md  SPEC-002_TRUST_5_품질검증보고서.md  env.example
.claude/: settings.json
.moai/config/: config.yaml
.moai/memory/: last-session-state.json
.moai/project/: product.md  structure.md  tech.md
.moai/scripts/: switch-provider.sh
backend/: .dockerignore  README.md  alembic.ini  coverage.xml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_phase1_workflow_core_models.py  002_phase2_execution_models.py  20260113_163840_49ee0350b7d5_phase3_schedule_model.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  agents.py  executions.py  schedules.py  tools.py  validation.py  workflows.py
backend/app/core/: __init__.py  config.py  exceptions.py  jwt.py  logging.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  agent.py  base.py  enums.py  execution.py  schedule.py  tool.py  tool_spec009.py  user.py  workflow.py
backend/app/schemas/: __init__.py  agent.py  base.py  execution.py  processors.py  schedule.py  tool.py  user.py  validation.py  workflow.py
backend/app/services/: __init__.py  agent_service.py  execution_service.py  tool_service.py  user_service.py  workflow_service.py
backend/app/services/executors/: __init__.py  base.py  http_executor.py
backend/app/services/schedule/: __init__.py  scheduler.py  service.py  triggers.py
backend/app/services/workflow/: __init__.py  algorithms.py  cache.py  context.py  exceptions.py  executor.py  graph.py  validator.py
backend/app/services/workflow/processors/: __init__.py  adapter.py  agent.py  aggregator.py  base.py  condition.py  errors.py  metrics.py  registry.py  tool.py  trigger.py
backend/app/utils/: __init__.py  crypto.py  email.py
backend/tests/: __init__.py  conftest.py  test_api_agents.py  test_api_deps.py  test_api_executions.py  test_api_schedules.py  test_api_tools.py  test_api_workflows.py  test_api_workflows_errors.py  test_conftest.py  test_db_session.py  test_health.py  test_models_base.py  test_models_enums.py  test_models_execution.py  test_models_schedule.py  test_models_tool_agent.py  test_models_workflow.py  test_schemas_validation.py  test_services_execution.py  test_services_workflow.py
backend/tests/core/: test_logging.py  test_security.py
backend/tests/integration/: test_schedule_integration.py
backend/tests/models/: test_schedule_history.py  test_tool_spec009.py  test_user.py
backend/tests/schemas/: test_schedule_schemas.py  test_user_schemas.py
backend/tests/services/: test_agent_service.py  test_processors_structure.py  test_schedule_service.py  test_tool_config_validation.py  test_tool_service.py  test_user_service.py
backend/tests/services/executors/: test_http_executor.py
backend/tests/services/processors/: test_adapter_processor.py  test_agent_processor.py  test_aggregator_processor.py  test_base_processor.py  test_condition_processor.py  test_errors.py  test_metrics.py  test_registry.py  test_tool_processor.py  test_trigger_processor.py
backend/tests/services/schedule/: __init__.py  conftest.py  test_scheduler.py  test_triggers.py
backend/tests/services/workflow/: test_algorithms.py  test_context.py  test_exceptions.py  test_executor.py  test_graph.py  test_validator.py  test_validator_caching.py  test_validator_visualization.py
backend/tests/unit/: test_crypto.py  test_crypto_masking.py  test_database_engine.py  test_guid_type.py  test_migration_safety.py  test_session_factory.py  test_session_factory_simple.py  test_soft_delete_filtering.py  test_tool_auth_masking.py
backend/tests/unit/models/: test_agent.py  test_agent_model.py
backend/tests/unit/schemas/: test_agent.py  test_agent_schemas.py
backend/tests/unit/schemas/_pending/: test_tool.py
backend/tests/unit/services/: test_agent_service.py  test_tool_service.py
backend/tests/utils/: test_email.py
backend/tests_unit_backup/unit/schemas/: test_agent.py
docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  env.example
docker/init-db/: 01-init.sql
docs/: ROADMAP.md
docs/api/: agents.md  authentication.md  schedules.md  tools.md
docs/architecture/: database-schema.md  jwt-auth-flow.md  llm-provider-guide.md  schedule-management.md  tool-agent-registry.md
frontend/: .dockerignore  .gitignore  env.local.example  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
(+60 files in other folders)
